--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -73,6 +73,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 
 .header .inner-icon-menu span {
@@ -174,11 +175,12 @@
     padding-bottom: 40px;
 }
 
-.section-1 .inner-button .inner-btn {
-    margin-right: 15px;
+.section-1 .inner-button {
+    z-index: 3;
 }
 
 .section-1 .inner-button .inner-btn {
+    margin-right: 15px;
     background: var(--color-btn);
     color: var(--color-primary);
     border: 1px solid transparent;
@@ -202,11 +204,11 @@
     box-shadow: none;
 }
 @media (max-width: 767.98px) {
-    .section-1 .inner-desc,
-    .section-1 .inner-title,
-    .section-1 .inner-head,
-    .section-1 .inner-button {
+    .section-1 {
         text-align: center;
+    }
+    .section-1 .inner-button {
+        width: 100%;
     }
 }
 
@@ -422,6 +424,20 @@
         font-size: 37px;
     }
 }
+
+@media (max-width:576.98px) {
+    .section-fix-1 .inner-card .inner-title {
+        font-size: 31px;
+        line-height: 2.5rem;
+    }
+    .section-fix-1 .inner-card {
+        padding: 30px 10px;
+    }
+
+    .section-fix-1 .photo img {
+        margin-top: 6rem;
+    }
+}
 /* end section-fix-1 */
 /* section-3 */
 .section-3 .inner-contents .inner-title {
@@ -584,8 +600,15 @@
 }
 
 @media (max-width: 576.98px) {
+    .section-5 {
+        padding: 20px;
+    }
     .section-5 .inner-content .inner-title {
         font-size: 29.99px;
+    }
+
+    .section-5 .bgd-white {
+        padding: 30px 10px;
     }
 }
 /* end section-5 */
@@ -616,7 +639,12 @@
     background-color: var(--color-white);
     border-radius: 10px;
     text-align: center;
-    margin: 50px 0;
+    margin: 20px 0;
+    padding-top: 30px;
+}
+
+.section-6 .box-parent.box-parent-bg{
+    background-color: var(--color-bg);
 }
 
 .section-6 .box-parent .box-image img {
@@ -851,6 +879,19 @@
     }
 }
 
+@media (max-width: 575.98px) {
+    .section-7 .inner-content .inner-desc {
+        font-size: 20px;
+    }
+
+    .section-7 .inner-content .inner-name {
+        font-size: 20px;
+        text-align: initial;
+    }
+    .section-7 .inner-content .inner-job {
+        text-align: initial;
+    }
+}
 /* end section-7 */
 
 /* section-8 */
@@ -869,6 +910,7 @@
 .section-8 .box-play {
     position: relative;
 }
+
 .section-8 .box-play .box-bgd img {
     width: 100%;
     border-radius: 10px;
@@ -903,6 +945,10 @@
 @media(max-width: 575.98px) {
     .section-8 .box-head {
         font-size: 36px;
+    }
+
+    .section-8 .box-play .box-bgd img {
+        height: 400px;
     }
 }
 /* end section-8 */
@@ -977,6 +1023,10 @@
     .section-9 .box-head h2 {
         font-size: 30px;
     }
+
+    .section-9 .box-info {
+        padding: 30px 20px;
+    }
 }
 /* end section-9 */
 
@@ -990,5 +1040,12 @@
     color: var(--color-white);
     text-align: center;
     font-size: 18px;
+}
+
+@media (max-width: 575.98px) {
+    .footer .footer-end {
+        padding: 24px 0;
+        font-size: 15px;
+    }
 }
 /* end footer */
