--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -251,12 +251,13 @@
     font-weight: 600;
     color: var(--color-text-2);
     font-size: 18px;
+    margin: 0 0 0 10px;
 }
 
 .section-2 .inner-content .inner-title {
     font-size: 58px;
     font-weight: 600;
-    margin: 0;
+    margin: 0 0 0 10px;
 }
 
 .section-2 .inner-box {
@@ -267,12 +268,15 @@
     width: 140px;
     background: var(--color-white);
     border-radius: 10px;
-    margin: 0 0 20px 20px;
+    /* margin: 0 0 20px 20px; */
     align-items: center;
     display: flex;
     justify-content: center;
     flex-direction: column;
     padding: 30px;
+    /* margin-left: 0;
+    margin-right: 20px; */
+    margin: 10px;
 }
 
 .section-2 .inner-box .inner-icon i {
@@ -289,16 +293,16 @@
 .section-2 .inner-content .inner-desc {
     font-size: 17px;
     color: var(--color-text-2);
-    padding-left: 20px;
     max-width: 500px;
+    margin: 0 0 0 10px;
 }
 
 .section-2 .inner-content .inner-btn {
-    margin-left: 20px;
     background: var(--color-btn);
     color: var(--color-primary);
     font-size: 16px;
     border: none;
+    margin: 0 0 0 10px;
 }
 
 .section-2 .inner-content .inner-btn:hover {
@@ -316,6 +320,11 @@
 
     .section-2 .inner-content .inner-desc {
         max-width: 100%;
+        margin: 0;
+    }
+
+    .section-2 .inner-content .inner-btn {
+        margin: 0;
     }
 }
 
@@ -601,7 +610,7 @@
 
 @media (max-width: 576.98px) {
     .section-5 {
-        padding: 20px;
+        padding: 80px 20px;
     }
     .section-5 .inner-content .inner-title {
         font-size: 29.99px;
@@ -799,7 +808,7 @@
     }
 
     .section-6 .box-lists {
-        bottom:-125%;
+        bottom: -153%;
     }
 }
 /* section-6 */
@@ -930,6 +939,7 @@
     position: absolute;
     top: calc(50% - 50px);
     left: calc(50% - 50px);
+    cursor: pointer;
 }
 
 @media(max-width: 767.98px) {
@@ -1045,7 +1055,7 @@
 @media (max-width: 575.98px) {
     .footer .footer-end {
         padding: 24px 0;
-        font-size: 15px;
+        font-size: 13px;
     }
 }
 /* end footer */
